manifests/hello-world-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-dock-hello-world-deploy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: py-dock-hello-world
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: py-dock-hello-world
    spec:
      containers:
      - image: DOCKER_IMAGE
        imagePullPolicy: Always
        name: py-dock-hello-world
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: py-dock-hello-world-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: py-dock-hello-world
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: py-dock-hello-world-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: py-dock-hello-world-service
              port:
                number: 8080
